[project]
name = "nimbus"
version = "0.1.0"
description = ""
authors = [
    {name = "Brett Rowan",email = "121075405+b-rowan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.5"

