[project]
name = "nimbus"
version = "0.1.0"
description = ""
authors = [
    {name = "Brett Rowan",email = "121075405+b-rowan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.tests.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
markdown-exec = {extras = ["ansi"], version = "^1.10.3"}
griffe-pydantic = "^1.1.4"


[tool.poetry.group.examples.dependencies]
fastapi = "^0.115.12"
uvicorn = "^0.34.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
